--- a/spring/entrepeneurship/bio2.tex
+++ b/spring/entrepeneurship/bio2.tex
@@ -3,6 +3,7 @@
 \moderncvstyle{casual}
 \moderncvcolor{blue}
 \usepackage[scale=0.75]{geometry}
+\usepackage{graphicx}
 %\usepackage{xeCJK}
 \name{Andres}{Ponce}
 
@@ -12,8 +13,10 @@
 \social[linkedin]{https://www.linkedin.com/in/andreseponce}
 \social[github]{https:://www.github.com/andrew15818}
 \photo[64pt][0.4pt]{images/foto.jpg}
+
 %%actual cv
 \begin{document}
+
 \makecvtitle
 
 \section{Education}
@@ -22,7 +25,7 @@
 
 \section{Languages}
 \cvitemwithcomment{Chinese}{Conversational}{ Can read, write, and speak in most everyday scenarios.}
-\cvitemwithcomment{English}{Proficient}{Can fluently speak, read, and write.}
+\cvitemwithcomment{English}{Proficient}{Fluid and able to communicate at a high level.}
 \cvitemwithcomment{Spanish}{Native}{}
 
 \section{Technical Skills}
@@ -30,8 +33,12 @@
 \cvitemwithcomment{C}{}{Used for many courses and projects.}
 \cvitemwithcomment{C++}{}{}
 \cvitemwithcomment{Git}{}{Used for personal and various school collaborative projects.}
+\cvitemwithcomment{\LaTeX}{}{Familiarity with writing professional-looking documents.}
 
 \section{School Activity}
+\cvitemwithcomment{Calligrpahy Club}{2019--present}{Personally interested in learning the fundamentals
+of Chinese calligraphy.}
+%\cvitemwithcomment{Model United Nations}{2020}{}
 
 \section{Previous Experience}
 \cventry{2013--2017}{Translator}{Soto Cano Air Force Base} {Comayagua, Honduras}{}
